# RegelleistungNetAutomation

./: .gitignore  Dockerfile  Fcr_results_20240601.csv  README.md  data.csv  data.xlsx  docker-compose.yml  logiops.cfg  main.py  pyproject.toml  quix.yaml  regelleistung_convert.py  telegraf.conf
Capacity aFRR - Anonymresults/: regelleistung_convert.py
Capacity aFRR - Anonymresults/results_xlsx/: RESULT_OVERVIEW_CAPACITY_MARKET_FCR_2023-10-24_2023-10-24.xlsx
Capacity aFRR - Demand/: regelleistung_convert.py
Capacity aFRR - Results/: regelleistung_convert.py
Capacity-FCR Anonymresults/: regelleistung_convert.py  regelleistung_fcr_anonym_results.py
Capacity-FCR Demands/: regelleistung_convert.py  regelleistung_fcr_demand.py
Capacity-FCR Results/: Dockerfile  regelleistung_convert.py  regelleistung_fcr_results.py
Energy aFRR - Demand/: regelleistung_convert.py
Energy aFRR - Results/: regelleistung_convert.py
InfluxDB 3.0/: app.yaml  main.py  main_old.py
Processing/: app.yaml
Starter source/: app.yaml  dockerfile  main.py  regelleistung.csv  regelleistung_fcr_result_output_to_console.py  regelleistung_fcr_result_quix.py  regelleistung_fcr_results.py  requirements.txt
archive/: README.md
fcr_results/: __init__.py  fcr_results.py
fcr_results_download/: app.yaml  requirements.txt
fcr_results_downloader/: app.yaml  requirements.txt
fcr_results_downloader_poetry/: app.yaml  pyproject.toml
fcr_results_downloader_poetry/fcr_results/: fcr_results.py
results_xlsx/: 2023-10-24_results.xlsx
telegraf/: telegraf.conf
telegraf_import/: output.csv
(+40 files in other folders)
