[tool.poetry]
name = "regelleistungnetautomation"
version = "0.1.0"
description = ""
authors = ["Rightgeht from Github"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
schedule = "^1.2.2"
datetime = "^5.5"
requests = "^2.28.0"
openpyxl = "^3.1.3"
uuid = "^1.30"
quixstreams = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
